<resources>
    <string name="app_name">СФЕРА</string>
    <string name="app_version">1.5</string>
    <string name="app_year">2019</string>
    <string name="app_copyright">sfera.press</string>
    <string name="app_email">support@sfera.press</string>
    <string name="app_site">www.sfera.press</string>
    <string name="facebook_app_id">560931294429656</string>
    <string name="fb_login_protocol_scheme">fb560931294429656</string>
    <string name="google_places_api_key">AIzaSyB9yLCYr9G96pTM12PoZrrH9x6Vq6Ql770</string>
    <string name="app_share_text">Скачайте СФЕРА https://play.google.com/store/apps/details?id=ru.club.sfera</string>
    <string name="action_login">Вход</string>
    <string name="action_signup">Регистрация</string>
    <string name="action_logout">Выход</string>
    <string name="action_settings">Настройки</string>
    <string name="action_continue">Продолжить</string>
    <string name="action_unblock">Разблокировать</string>
    <string name="action_block">Заблокировать</string>
    <string name="action_block_profile">Заблокировать</string>
    <string name="action_unblock_profile">Разблокировать</string>
    <string name="action_about">О приложении</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Да</string>
    <string name="action_no">Нет</string>
    <string name="action_copy">Копировать</string>
    <string name="action_save">Сохранить</string>
    <string name="action_send">Отправить</string>
    <string name="action_open">Открыть</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_reply">Повтор</string>
    <string name="action_create_chat">Общаться в чате</string>
    <string name="action_refresh">Обновить</string>
    <string name="action_report">Пожаловаться</string>
    <string name="action_remove">Удалить</string>
    <string name="action_remove_all">Удалить все</string>
    <string name="action_clear">Очистить</string>
    <string name="action_remove_chat">Удалить чат</string>
    <string name="action_deactivate">Деактивировать</string>
    <string name="action_create">Создать</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_close">Закрыть</string>
    <string name="action_more">Загрузить больше</string>
    <string name="action_post">Опубликовать</string>
    <string name="action_search">Поиск</string>
    <string name="action_retry">Повторить</string>
    <string name="action_turn_on">Включить</string>
    <string name="action_turn_off">Выключить</string>
    <string name="action_select_birth">Дата рождения</string>
    <string name="action_camera">Камера</string>
    <string name="action_gallery">Выбрать из галереи</string>
    <string name="action_copy_url">Скопировать ссылку</string>
    <string name="action_open_url">Открыть в браузере</string>
    <string name="action_share">Поделиться</string>
    <string name="action_repost">Репост</string>
    <string name="action_grant">Предоставить</string>
    <string name="action_gift">Подарить</string>
    <string name="action_see_all">Смотреть все</string>
    <string name="action_gallery_more">Все</string>
    <string name="action_add_me_here">Добавить</string>
    <string name="action_nearby_mode">Режим</string>
    <string name="action_nearby_mode_items">Сообщения</string>
    <string name="action_nearby_mode_people">Поблизости</string>
    <string name="action_new">Новое сообщение</string>
    <string name="action_profile_edit_photo">Редактировать фото</string>
    <string name="action_profile_edit_cover">Редактировать  обложку</string>
    <string name="action_profile_edit">Редактировать</string>
    <string name="action_login_with_facebook">Войдите через Facebook</string>
    <string name="action_signup_with_facebook">Зарегистрируйтесь через Facebook</string>
    <string name="action_connect_with_facebook">Соединитесь с Facebook</string>
    <string name="action_remove_connection">Удалить соединение</string>
    <string name="action_regular_signup">Вернуться к обычной регистрационной форме</string>
    <string name="action_forgot_password">Восстановить пароль?</string>
    <string name="label_profile_report_0">Спам</string>
    <string name="label_profile_report_1">Ненависть или насилие</string>
    <string name="label_profile_report_2">Порнография</string>
    <string name="label_profile_report_3">Поддельный профиль</string>
    <string name="label_profile_report_4">Пиратство</string>
    <string name="label_sex_undefined">Пол не установлен</string>
    <string name="label_sex_male">Мужской</string>
    <string name="label_sex_female">Женский</string>
    <string name="placeholder_auth">Имя пользователя или email</string>
    <string name="placeholder_password">Пароль</string>
    <string name="placeholder_login">Имя пользователя</string>
    <string name="placeholder_fullname">Полное имя</string>
    <string name="placeholder_location">Местоположение</string>
    <string name="placeholder_facebook_page">Facebook страница</string>
    <string name="placeholder_instagram_page">Instagram страница</string>
    <string name="placeholder_bio">О себе</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_phone">Номер телефона</string>
    <string name="placeholder_subject">Тема запроса</string>
    <string name="placeholder_support_detail">О чем вы нам хотите сказать?</string>
    <string name="placeholder_current_password">Текущий пароль</string>
    <string name="placeholder_new_password">Новый пароль</string>
    <string name="placeholder_item_category">Выберите раздел</string>
    <string name="placeholder_item_title">Заголовок</string>
    <string name="placeholder_item_login">Имя пользователя, email</string>
    <string name="placeholder_item_passw">Пароль</string>
    <string name="placeholder_item_url">Сайт</string>
    <string name="placeholder_item_description">Написать сообщение</string>
    <string name="placeholder_new_gallery_item_description">Напишите сообщение</string>
    <string name="placeholder_search">Поиск</string>
    <string name="placeholder_comment">Напишите комментарий&#8230;</string>
    <string name="placeholder_message">Напишите сообщение&#8230;</string>
    <string name="msg_loading">Загрузка&#8230;</string>
    <string name="msg_loading_2">Загрузка&#8230;</string>
    <string name="msg_network_error">Проверьте сетевое подключение</string>
    <string name="msg_account_blocked">Этот аккаунт заблокирован модератором</string>
    <string name="msg_copied_to_clipboard">Скопировано в буфер обмена</string>
    <string name="msg_enter_item">Пожалуйста, напишите что-нибудь или приложите фото</string>
    <string name="msg_enter_msg">Пожалуйста, напишите что-нибудь или приложите фото</string>
    <string name="msg_gift_sent">Подарок успешно отправлен</string>
    <string name="msg_send_msg_error">Вы не можете отправить сообщение пользователю</string>
    <string name="msg_item_posted">Сообщение успешно опубликовано</string>
    <string name="msg_item_saved">Сообщение успешно сохранено</string>
    <string name="msg_password_changed">Пароль успешно изменен</string>
    <string name="msg_settings_saved">Настройки успешно сохранены</string>
    <string name="msg_ticket_send_success">Ваш запрос принят! Вы получите ответ на электронное письмо, которое указано в запросе</string>
    <string name="msg_password_reset_link_sent">На ваш email было отправлено сообщение со ссылкой для сброса пароля</string>
    <string name="msg_no_such_user_in_bd">Нет такого пользователя в базе данных</string>
    <string name="msg_connect_to_facebook_success">Вы успешно связали приложение с вашим аккаунтом на Facebook!</string>
    <string name="msg_connect_to_facebook_error">Ваш аккаунт на Facebook уже связан с другим аккаунтом</string>
    <string name="msg_connect_to_facebook_removed">Вы хотите подключить удаленный аккаунт на Facebook</string>
    <string name="msg_comment_has_been_added">Комментарий был добавлен</string>
    <string name="msg_chat_has_been_removed">Чат был удален</string>
    <string name="msg_profile_removed_from_blacklist">Пользователь удаляется из списка заблокированных</string>
    <string name="msg_post_link_copied">Ссылка скопирована в буфер обмена</string>
    <string name="msg_profile_added_to_blacklist">Пользователь добавляется в список заблокированных</string>
    <string name="msg_comments_disabled">Пользователь не хочет, чтобы вы комментировали его сообщения</string>
    <string name="msg_post_has_been_already_shared">Вы уже поделились этим сообщением</string>
    <string name="msg_account_deactivate">Вы можете восстановить свою учетную запись позже с помощью авторизации через логин и пароль. \n\n Все ваши сообщения будут навсегда удалены.</string>
    <string name="error_internet_connection">Нет подключения к интернету</string>
    <string name="label_or">или</string>
    <string name="settings_notifications_likes">Лайки</string>
    <string name="settings_notifications_gifts">Подарки</string>
    <string name="settings_notifications_friends_requests">Запросы в друзья</string>
    <string name="settings_notifications_comments">Комментарии</string>
    <string name="settings_notifications_messages">Приватные сообщения</string>
    <string name="settings_notifications_comment_reply">Ответы на комментарии</string>
    <string name="settings_notifications_items">Новые сообщения на моей стене</string>
    <string name="settings_notifications_reposts">Репост моих сообщений</string>
    <string name="nav_feed_menu">Стена</string>
    <string name="nav_stream_menu">Лента</string>
    <string name="nav_search">Поиск</string>
    <string name="nav_nearby">Рядом с вами</string>
    <string name="nav_favorites">Избранное</string>
    <string name="nav_notifications">Уведомления</string>
    <string name="nav_messages">Сообщения</string>
    <string name="nav_friends">Друзья</string>
    <string name="nav_guests">Гости</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_settings">Настройки</string>
    <string name="title_activity_gallery">Галерея</string>
    <string name="settings_header_privacy_general">Настройки конфиденциальности</string>
    <string name="settings_allow_messages">Получать сообщения</string>
    <string name="settings_allow_messages_summary">Вы сможете получать сообщения от любого пользователя</string>
    <string name="settings_allow_items_comments">Разрешить комментарии к сообщениям</string>
    <string name="settings_allow_items_comments_summary">Разрешить комментарии ко всем сообщениям</string>
    <string name="settings_allow_comments">Разрешить комментарии в галереи</string>
    <string name="settings_allow_comments_summary">Разрешить комментарии в сообщениях галереи</string>
    <string name="settings_allow_profile_info_only_for_friends">Информация профиля</string>
    <string name="settings_allow_profile_info_only_for_friends_summary">Только друзья могут видеть информацию в моем профиле</string>
    <string name="settings_allow_show_online">Онлайн</string>
    <string name="settings_allow_show_online_summary">Показать, когда вы в сети</string>
    <string name="settings_allow_show_phone">Номер телефона</string>
    <string name="settings_allow_show_phone_summary">Показывать ваш номер телефона</string>
    <string name="settings_allow_show_my_gallery">Показывать галерею</string>
    <string name="settings_allow_show_my_gallery_summary">Показывать галерею для всех пользователей</string>
    <string name="settings_allow_show_my_friends">Показывать друзей</string>
    <string name="settings_allow_show_my_friends_summary">Показывать друзей для всех пользователей</string>
    <string name="settings_allow_items_from_friends">Разрешить сообщения от друзей</string>
    <string name="settings_allow_items_from_friends_summary">Мои друзья могут писать сообщения на моей стене</string>
</resources>