<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_stream"
            android:icon="@drawable/ic_action_stream"
            android:title="@string/nav_stream_menu"
            android:visible="false" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_action_feed"
            android:title="@string/nav_feed_menu" />

        <item

            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_action_gallery"
            android:title="@string/title_activity_gallery" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_action_notifications"
            android:title="@string/nav_notifications"
            app:actionLayout="@layout/nav_menu_counter" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_action_messages"
            android:title="@string/nav_messages"
            app:actionLayout="@layout/nav_menu_counter" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_action_friends"
            android:title="@string/nav_friends"
            app:actionLayout="@layout/nav_menu_counter" />
        <item
            android:id="@+id/nav_guests"
            android:icon="@drawable/ic_action_guests"
            android:title="@string/nav_guests"
            app:actionLayout="@layout/nav_menu_counter" />
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_action_nearby"
            android:title="@string/nav_nearby" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_action_favorites"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/nav_settings" />
    </group>

</menu>
