<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="allowMessagesGCM"
        android:title="@string/settings_notifications_messages">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="allowLikesGCM"
        android:title="@string/settings_notifications_likes">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="allowGiftsGCM"
        android:title="@string/settings_notifications_gifts">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="allowCommentsGCM"
        android:title="@string/settings_notifications_comments">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="allowCommentReplyGCM"
        android:title="@string/settings_notifications_comment_reply">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="allowFriendsRequestsGCM"
        android:title="@string/settings_notifications_friends_requests">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="allowItemsGCM"
        android:title="@string/settings_notifications_items">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="allowRepostsGCM"
        android:title="@string/settings_notifications_reposts">
    </CheckBoxPreference>

</PreferenceScreen>
