<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.club.sfera.ViewGalleryItemActivity">
    <item android:id="@+id/action_edit" android:title="@string/action_edit"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_remove" android:title="@string/action_remove"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_report" android:title="@string/action_report"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>