<LinearLayout
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contentScreen">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/appBackground"
            android:focusableInTouchMode="false"
            android:src="@drawable/app_bg"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:id="@+id/subScreen">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/appLogoView"
                    android:focusableInTouchMode="false"
                    android:src="@drawable/app_logo"
                    android:layout_alignParentBottom="false"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentLeft="false"
                    android:layout_alignWithParentIfMissing="false" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_signup"
                    android:id="@+id/signupBtn"
                    android:layout_above="@+id/loginBtn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:stateListAnimator="@null"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"
                    android:background="@drawable/button_white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_login"
                    android:id="@+id/loginBtn"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:stateListAnimator="@null"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@drawable/button_primary" />

                <TextView
                    android:text="@string/label_or"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_or"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textColor="@color/dark_blue" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_login_with_facebook"
                    android:id="@+id/facebookBtn"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:drawableTint="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:stateListAnimator="@null"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@drawable/button_facebook" />

                <com.facebook.login.widget.LoginButton
                    xmlns:facebook="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/fb_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    facebook:com_facebook_login_text="@string/action_login_with_facebook"
                    facebook:com_facebook_logout_text="@string/action_login_with_facebook"
                    android:padding="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/connectionScreen"
        android:background="#fff">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appLogoView3"
            android:focusableInTouchMode="false"
            android:src="@drawable/app_logo"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/error_internet_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appLogoView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:id="@+id/textView2" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loadingScreen"
        android:background="#fff">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appLogoView2"
            android:focusableInTouchMode="false"
            android:src="@drawable/app_logo"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</LinearLayout>